# alloy-strengthening-contributions-modeling-public

./: .gitattributes  .gitignore  README.md  pyproject.toml
data/: README.md
docs/: CW_CR_PROGRESS_REPORT_2026_05_12.md  CW_CR_STRENGTHENING_ANALYSIS.md  EVALUATION_M54_MODEL_v1.md  FINDINGS.md  LIT_SEARCH_PHASE_3_7.md  MODEL_PLAN.md  PAPER_OUTLINE_CH5.md  PUBLIC_MIRROR_SETUP.md
index/: cited-by-summaries.md  main-article-index.md  sun-2022-index.md  trip-foundations-index.md
notebooks/: 01_introduction.ipynb  02_trip_toughening.ipynb  03_crack_tip_kic.ipynb
pdf-archive/: MANIFEST.md
reference docs/references 5:11:2026, 3:07:45 PM/: references 5:11:2026, 3:07:45 PM.bib
references/: README.md  citation-chart.md  references.bib
scripts/: build_kic_notebook.py  build_public_mirror.sh  build_trip_notebook.py  build_walkthrough_notebook.py  calibrate.py
src/m54model/: __init__.py  constants.py  plotting.py
src/m54model/alloys/: __init__.py  compositions.py  ferrium_m54.py
src/m54model/calibration/: __init__.py  anchors.py  data_loaders.py  strain_rate.py  sweep.py  user_mechanical_data.py  user_microstructure_data.py  user_trip_data.py
src/m54model/kinetics/: __init__.py  jma.py  lsw.py  m2c.py
src/m54model/precipitates/: __init__.py  base.py
src/m54model/states/: __init__.py  base.py
tests/: test_calibration.py  test_constants.py  test_crack_tip.py  test_crack_tip_spatial.py  test_cw_cr_factory.py  test_derived_properties.py  test_maresca_tensile.py  test_smoke.py  test_strain_rate.py  test_through_thickness.py  test_toughening.py  test_user_mechanical_data.py  test_williams_field.py  test_williamson_hall.py  test_xrd.py
(+22 files in other folders)
