[project]
name = "m54model"
version = "0.1.0"
description = "Strengthening + toughening model for Ferrium M54 secondary-hardening UHSS"
authors = [{name = "Joshua Edwards"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "pandas>=2.2",
    "pydantic>=2.6",
    "pint>=0.23",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.8",
    "ipykernel>=6.29",
    "jupyterlab>=4.1",
]
ui = [
    "streamlit>=1.32",
]
calphad = [
    "pycalphad>=0.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/m54model"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "SIM"]
ignore = [
    "N802",  # function name lowercase (test_low_T, test_RT, etc. — physics names)
    "N803",  # arg name lowercase (we use sigma_y, K_HP, etc. matching physics convention)
    "N806",  # var in func should be lowercase (same reason)
    "N815",  # mixedCase class attrs (we use sigma_y_MPa with unit suffix)
    "E741",  # ambiguous var names like 'l' (length) — physics convention
]

[tool.ruff.lint.per-file-ignores]
"scripts/build_*_notebook.py" = ["E501"]  # cell contents inside string literals

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
